--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- p1 -->
 
         <div class="nav">
-            <p>CUBAN'S EDGE</p>
+            <h4>CUBAN'S EDGE</h4>
             <div class="cennav">
                 <p>
                     ABOUT
@@ -43,7 +43,7 @@
         </div>
         <div class="page1">
 
-            <h5 class="motion">INTELLIGENT &nbsp;&nbsp; TRADING &nbsp;&nbsp; TOOLS &nbsp; &nbsp; BUILT &nbsp;&nbsp; FOR
+            <h5 class="motion2">INTELLIGENT &nbsp;&nbsp; TRADING &nbsp;&nbsp; TOOLS &nbsp; &nbsp; BUILT &nbsp;&nbsp; FOR
                 &nbsp;&nbsp;
                 PROFESSIONALS
             </h5>
